--- a/manifests/nginx/nginx.yaml
+++ b/manifests/nginx/nginx.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: nginx
+        app.kubernetes.io/name: nginx # Added required label
     spec:
       containers:
       - name: nginx
