--- a/manifests/nginx/nginx.yaml
+++ b/manifests/nginx/nginx.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: nginx
+        app.kubernetes.io/name: nginx # Added required label to comply with policy
     spec:
       containers:
       - name: nginx
