--- a/manifests/nginx/nginx.yaml
+++ b/manifests/nginx/nginx.yaml
@@ -19,4 +19,4 @@ spec:
       - name: nginx
         image: nginx:1.14.2
         securityContext:
-          privileged: true
+          privileged: false # Changed from true to false to comply with security policy disallowing privileged containers
